Set up CSS, first version background

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>
         Museum Guide
     </title>
+    <link rel="stylesheet" type="text/css" media="screen" href="index.css">
 </head>
 
 <body>
