--- a/pages/detail-page.html
+++ b/pages/detail-page.html
@@ -7,6 +7,7 @@
     <title>Een vrolijke vioolspeler</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="detail-page.css" />
+    <script src="detail-page.js"></script>
 </head>
 
 <body>
