Set up js files and declare submitComment

--- a/index.html
+++ b/index.html
@@ -14,37 +14,13 @@
         <h1>Zorro's Mobile Museum App</h1>
         <section id="gallery">
             <h2>Gallery</h2>
-            <a href="./pages/detail-page.html">
-                <img class="artObject"
-                    src="https://lh3.googleusercontent.com/V3sjNgCA_Jssjm0sTKaPZeOwCv_vAPpjllrAF-yAB8UkqIlc6UX_jxJmxH_axVHTHxlK1E7Slecg8K5bIvSbDlw0zg=s0"
-                    alt="Violin player">
-            </a>
-            <a href="./pages/detail-page.html">
-                <img class="artObject"
-                    src="https://lh3.googleusercontent.com/nfJiRConmXf4QR1bK3-E456qIEp2bYtuemyy3P3t7PonntyGJ8iPzFNKJPhZFCSSmJmj2AHePE4V1xl3BOz2NT8mfbNg=s0"
-                    alt="Windmill">
-            </a>
-            <a href="./pages/detail-page.html">
-                <img class="artObject"
-                    src="https://lh3.googleusercontent.com/J-mxAE7CPu-DXIOx4QKBtb0GC4ud37da1QK7CzbTIDswmvZHXhLm4Tv2-1H3iBXJWAW_bHm7dMl3j5wv_XiWAg55VOM=s0"
-                    alt="Party">
-            </a>
-            <a href="./pages/detail-page.html">
-                <img class="artObject"
-                    src="https://lh3.googleusercontent.com/inIJ6TyL4uYlpwOqHFGCCJ311jiFAnNQRMuitYedAVZvnFlAsjdKtIfAkhIQyZw-3ArH-oNdOQnxOQTKJEu2SuX_O-2f=s0"
-                    alt="Duck">
-            </a>
-            <a href="./pages/detail-page.html">
-                <img class="artObject"
-                    src="https://lh3.googleusercontent.com/Ub2HAuuvtRVBk7nV94UCreg2lrndsC646xVC5I9CupMvRQM3TV-_F201NdHsqXo92qNqdVaQWLtuAa7A-qjX34dL1RWM=s0"
-                    alt="Animal party">
-            </a>
         </section>
     </main>
 
     <footer>
         <p>Made with ❤ at Codaisseur</p>
     </footer>
+    <script src="index.js"></script>
 </body>
 
 </html>
